fixed nav drop-down arrow spacing

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -53,13 +53,13 @@ body, p {
 /**** Start superfish styles ****/
 /*** arrows **/
 .sf-menu a.sf-with-ul {
-	padding-right: 	2.25em;
+	padding-right: 	1.25em;
 	min-width:		1px; /* trigger IE7 hasLayout so spans position accurately */
 }
 .sf-sub-indicator {
 	position:		absolute;
 	display:		block;
-	right:			.75em;
+	right:			0;
 	top:			1.05em; /* IE6 only */
 	width:			10px;
 	height:			10px;
@@ -68,7 +68,6 @@ body, p {
 	background:		url('/images/arrows-ffffff.png') no-repeat -10px -100px; /* 8-bit indexed alpha png. IE6 gets solid image only */
 }
 a > .sf-sub-indicator {  /* give all except IE6 the correct values */
-	top:			.8em;
 	background-position: 0 -100px; /* use translucent arrow for modern browsers*/
 }
 /* apply hovers to modern browsers */
